.kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bauhaus-back
spec:
  selector:
    matchLabels:
      app: bauhaus-back
  template:
    metadata:
      labels:
        app: bauhaus-back
    spec:
      containers:
      - name: bauhaus-back
        image: jeromebourgeois/bauhausbofork:v3.3-docker
        resources:
          limits:
            memory: "2Gi"
            cpu: "1"
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: conf
            mountPath:  /usr/local/tomcat/webapps/rmesgncs.properties
            readOnly: true
            subPath: rmesgncs.properties
      volumes:
        - name: conf
          configMap:
            name: bauhaus-back
            items:
              - key: "rmesgncs.properties"
                path: "rmesgncs.properties"
