.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bauhaus-back
spec:
  selector:
    app: bauhaus-back
  ports:
  - port: 8080
    targetPort: 8080
