.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bauhaus-back
  labels:
    name: bauhaus-back
spec:
  rules:
  - host: gestion-metadonnees-api.demo.insee.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bauhaus-back
            port: 
              number: 8080
